--- a/src/styles/scss/components/_projects-carousel.scss
+++ b/src/styles/scss/components/_projects-carousel.scss
@@ -1,8 +1,6 @@
 .projects__main-container {
   color: $lightest-grey;
 
-  border: 9px solid purple;
-
   justify-content: center;
   @include display-flex;
   flex-direction: column;
@@ -12,8 +10,6 @@
 
 .carousel__outer-wrapper {
   width: 400px;
-
-  border: 2px solid greenyellow;
 
   display: flex;
   justify-content: center;
@@ -34,8 +30,6 @@
 /* Images Component */
 
 .carousel__slide-container--thumbnail {
-  border: 2px solid green;
-
   height: 400px;
 
   @include reset-list;
@@ -46,6 +40,15 @@
   width: 400px;
 }
 
+.carousel__slide--project-header {
+  color: $darkest-blue;
+  border: 0;
+
+  width: $w-full;
+
+  font-size: 40px;
+  font-weight: 800;
+}
 
 /* Arrows Component */
 
